@@ -1,6 +1,7 @@
 
 v1.2.1 "cotidie morimur":
  - Fix functionality of "find all missing"
+ - Fix issue where a large queue could not be installed
  - Add ability to reset settings by pressing R on startup or R in settings
  - Add ability to directly install themes to the SD card
  - Add ability to sort titles
